src/objects/Round_Robin_Assignee__c.object
<CustomObject>
    <fields>
        <fullName>Assignee_Id__c</fullName>
        <label>Assignee Id</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Round_Robin_Assignees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Round_Robin_Setup__c</fullName>
        <label>Round Robin Setup</label>
        <referenceTo>Round_Robin_Setup__c</referenceTo>
        <relationshipLabel>Round Robin Assignees</relationshipLabel>
        <relationshipName>Round_Robin_Assignees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Round Robin Assignee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Assignee_Id__c</columns>
        <columns>Owner__c</columns>
        <columns>Round_Robin_Setup__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RRA-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Round Robin Assignees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>